--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,3 @@
-Options +FollowSymLinks
 RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-
-RewriteRule ^(.*)$ /index.php?/$1 [L,QSA]
+RewriteRule ^C_Module/api(/.*)?$ /router.php [L]
